# CMakeList.txt : CMake project for DogProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("DogProject")

# Add source to this project's executable.
add_executable (DogProject "DogProject.cpp" "DogProject.h")

# TODO: Add tests and install targets if needed.
